--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -6,5 +6,8 @@
     }
     .ubicacion{
         box-shadow: 3px 3px 15px rgb(32, 32, 32);
-        }
     }
+    .map-icon{
+        display: none;
+    }
+}
