--- a/scss/contacto.scss
+++ b/scss/contacto.scss
@@ -7,6 +7,7 @@
         &:hover{
             transform: scale(1.04);
             transition: all .4s;
+            box-shadow:$shadow4;
         }
         .btn{
             background-color:$mainColor;
