--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600;700&display=swap");
-h3, body h2 {
-  font-family: "Dancing Script", cursive;
-  font-size: 3em;
+h4, html #body h2, body #body h2 {
+  font-family: "Playlist", "Dancing Script", cursive;
+  font-size: 2.5em;
   color: #5c285ce6;
   text-shadow: 2px 1px 30px #332c30;
   margin: 10px;
@@ -12,7 +12,9 @@ h3, body h2 {
   box-shadow: 10px 3px 20px #202020;
   background-color: #d7b5f7b3;
   width: 100vw;
-  z-index: 1; }
+  z-index: 1;
+  padding-top: 0;
+  padding-bottom: -7px; }
   #navbar:hover {
     transform: scale(1.02);
     transition: all .4s;
@@ -31,10 +33,6 @@ h3, body h2 {
       color: #5c285ce6;
       transform: scale(1.3);
       transition: all .4s; }
-
-#logo2 {
-  max-width: 150px;
-  padding-left: 20px; }
 
 #footer {
   background-color: #d7b5f7b3;
@@ -89,7 +87,7 @@ h3, body h2 {
   h1 {
     font-size: 1.7em !important; } }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 410px) {
   h1 {
     font-size: 1.4em !important;
     font-weight: 600; } }
@@ -98,7 +96,7 @@ h3, body h2 {
   h1 {
     font-size: 1.2em !important; } }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 1050px) {
   #titulo {
     font-size: 1.4em !important;
     padding: 10px !important; } }
@@ -119,7 +117,7 @@ h3, body h2 {
 
 @media screen and (max-width: 665px) {
   #text {
-    font-size: 1em !important;
+    font-size: 0.8em !important;
     font-weight: 400; } }
 
 @media screen and (max-width: 360px) {
@@ -186,9 +184,37 @@ h3, body h2 {
   h2 {
     font-size: 1.7em !important; } }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 410px) {
   h2 {
     font-size: 1.4em !important; } }
+
+@media screen and (max-width: 350px) {
+  h2 {
+    font-size: 1em !important; } }
+
+@media screen and (max-width: 1050px) {
+  h3 {
+    font-size: 2.5em !important; } }
+
+@media screen and (max-width: 600px) {
+  h3 {
+    font-size: 2em !important; } }
+
+@media screen and (max-width: 390px) {
+  h3 {
+    font-size: 1.7em !important; } }
+
+@media screen and (max-width: 1050px) {
+  main form h3 {
+    font-size: 2.5em !important; } }
+
+@media screen and (max-width: 600px) {
+  main form h3 {
+    font-size: 2em !important; } }
+
+@media screen and (max-width: 390px) {
+  main form h3 {
+    font-size: 1.7em !important; } }
 
 @media screen and (max-width: 665px) {
   .card-title {
@@ -222,7 +248,7 @@ h3, body h2 {
 
 @media screen and (max-width: 768px) {
   .aside-div {
-    margin-top: -40px;
+    margin-top: -25px;
     margin-bottom: -30px; } }
 
 @media screen and (max-width: 766px) {
@@ -230,15 +256,27 @@ h3, body h2 {
     padding: -20px;
     margin-bottom: -20px; } }
 
+body h3 {
+  font-family: "Playlist", "Dancing Script", cursive;
+  font-size: 2.5em;
+  color: #5c285ce6;
+  text-shadow: 2px 1px 30px #332c30;
+  margin: 10px;
+  padding-bottom: 10px;
+  text-align: center; }
+
 body main #tienda-div {
   box-shadow: 10px 3px 20px #202020;
   cursor: pointer;
   font-family: sans-serif, "Segoe UI", Tahoma, Verdana;
   text-align: center;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  max-height: 35em;
+  overflow: visible; }
   body main #tienda-div:hover {
     transform: scale(1.1);
-    transition: all .5s; }
+    transition: all .5s;
+    box-shadow: 5px 3px 40px #202020; }
   body main #tienda-div .btn {
     background-color: #d7b5f7b3;
     color: #00080f;
@@ -313,7 +351,7 @@ html, body {
       justify-content: center;
       align-items: center;
       color: #5c285ce6;
-      font-family: "Dancing Script", cursive;
+      font-family: "Playlist", "Dancing Script", cursive;
       font-weight: 600;
       width: 100vw;
       font-size: 3em;
@@ -333,11 +371,11 @@ html, body {
         box-shadow: 5px 3px 40px #202020; }
       html #body #main-section-div #titulo, body #body #main-section-div #titulo {
         font-family: sans-serif, "Segoe UI", Tahoma, Verdana;
-        font-size: 2em;
+        font-size: 1.7em;
         padding-bottom: 15px;
         padding-top: 10px;
         text-align: center;
-        color: #974997; }
+        color: #5c285ce6; }
       html #body #main-section-div #text, body #body #main-section-div #text {
         font-family: sans-serif, "Segoe UI", Tahoma, Verdana;
         font-size: 1em;
@@ -391,3 +429,8 @@ html, body {
       html #body #aside-div2 h5, body #body #aside-div2 h5 {
         font-family: sans-serif, "Segoe UI", Tahoma, Verdana;
         color: #5c285c; }
+    html #body .homero, body #body .homero {
+      width: 100vw;
+      margin-left: -24px;
+      margin-bottom: -48px;
+      z-index: -1; }
