--- a/scss/_font.scss
+++ b/scss/_font.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600;700&display=swap');
 
 // font
-$mainFont:'Dancing Script', cursive;
+$mainFont: 'Playlist','Dancing Script', cursive;
 $secondaryFont:sans-serif,'Segoe UI', Tahoma, Verdana, ;
 
 //text sizing
