--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -1,8 +1,8 @@
 //extend del h3 lo hice en "tienda" por un h2
 
-h3{
+h4{
     font-family:$mainFont;
-    font-size:$textXl;
+    font-size:$textLg2;
     color: $secondaryColor;
     text-shadow: $shadow2;
     margin: 10px;
